--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -2086,7 +2086,7 @@ fieldset[disabled] .form-control:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(244, 244, 244, 0.83);
+  background: rgba(244, 244, 244, 0.3);
 }
 
 /* --------------------------------------------------
@@ -7734,11 +7734,11 @@ form .input-error-2:focus {
   bottom: 15px;
   left: 0;
   right: 0;
-  width: 120px;
+  width: 200px;
   margin: 0 auto;
   font-size: 40px;
   text-align: center;
-  color: rgba(235, 235, 235, 0.5);
+  color: #111;
 }
 
 .scroller:focus {
@@ -7747,7 +7747,7 @@ form .input-error-2:focus {
 }
 
 .scroller:hover {
-  color: #ebebeb;
+  color: #444;
 }
 
 .scroller:hover .scroller-text {
@@ -7763,7 +7763,7 @@ form .input-error-2:focus {
   font-size: 10px;
   letter-spacing: 2.5px;
   text-transform: uppercase;
-  color: #ececec;
+  color: #444;
   -webkit-transform: translateY(5px);
       -ms-transform: translateY(5px);
           transform: translateY(5px);
@@ -7930,7 +7930,7 @@ form .input-error-2:focus {
 }
 
 .fs-slide-1 .bg-overlay {
-  background: rgba(17, 17, 17, 0.7);
+  background: rgba(17, 17, 17, 0.2);
 }
 
 .fs-slide-1 .hero-content {
@@ -7943,13 +7943,13 @@ form .input-error-2:focus {
   font-size: 6em;
   font-weight: 800;
   letter-spacing: 5px;
-  color: #ececec;
+  color: #111;
 }
 
 .fs-slide-1 .hero-content .hero-subheading {
   margin-top: 50px;
   margin-bottom: 30px;
-  color: #fff;
+  color: #111;
 }
 
 .fs-slide-2 {
@@ -7958,7 +7958,7 @@ form .input-error-2:focus {
 }
 
 .fs-slide-2 .bg-overlay {
-  background: rgba(17, 17, 17, 0.7);
+  background: rgba(17, 17, 17, 0.2);
 }
 
 .fs-slide-2 .hero-content {
@@ -7971,7 +7971,7 @@ form .input-error-2:focus {
   font-size: 6em;
   font-weight: 800;
   letter-spacing: 5px;
-  color: #ececec;
+  color: #111;
 }
 
 .fs-slide-2 .hero-content .hero-lead span {
@@ -7981,7 +7981,7 @@ form .input-error-2:focus {
 .fs-slide-2 .hero-content .hero-subheading {
   margin-top: 50px;
   margin-bottom: 30px;
-  color: #fff;
+  color: #111;
 }
 
 .fs-slide-3 {
@@ -7990,7 +7990,7 @@ form .input-error-2:focus {
 }
 
 .fs-slide-3 .bg-overlay {
-  background: rgba(17, 17, 17, 0.7);
+  background: rgba(17, 17, 17, 0.2);
 }
 
 .fs-slide-3 .hero-content {
@@ -8003,7 +8003,7 @@ form .input-error-2:focus {
   font-size: 4em;
   font-weight: 800;
   letter-spacing: 15px;
-  color: #ececec;
+  color: #111;
 }
 
 .fs-slide-3 .hero-content .hero-lead span {
@@ -8013,7 +8013,7 @@ form .input-error-2:focus {
 .fs-slide-3 .hero-content .hero-subheading {
   margin-top: 50px;
   margin-bottom: 30px;
-  color: #fff;
+  color: #111;
 }
 
 /* ---- 20.3 Full Width Slider ---- */
