Fix header colors

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -3033,7 +3033,7 @@ fieldset[disabled] .form-control:hover {
 }
 
 .navbar-trans:not(.navbar-inverse) .navbar-nav li a {
-  color: #999;
+  color: #ccc;
 }
 
 .navbar-trans:not(.navbar-inverse) .navbar-nav li a:focus,
@@ -3050,7 +3050,7 @@ fieldset[disabled] .form-control:hover {
 }
 
 .navbar-trans:not(.navbar-inverse) .navbar-nav .dropdown .dropdown-menu li a:hover {
-  color: #ddd;
+  color: #ccc;
 }
 
 .navbar-trans:not(.navbar-inverse) .navbar-nav .open .dropdown-toggle {
@@ -7738,7 +7738,7 @@ form .input-error-2:focus {
   margin: 0 auto;
   font-size: 40px;
   text-align: center;
-  color: #111;
+  color: #ececec;
 }
 
 .scroller:focus {
@@ -7763,7 +7763,7 @@ form .input-error-2:focus {
   font-size: 10px;
   letter-spacing: 2.5px;
   text-transform: uppercase;
-  color: #444;
+  color: #ececec;
   -webkit-transform: translateY(5px);
       -ms-transform: translateY(5px);
           transform: translateY(5px);
@@ -7930,7 +7930,7 @@ form .input-error-2:focus {
 }
 
 .fs-slide-1 .bg-overlay {
-  background: rgba(17, 17, 17, 0.2);
+  background: rgba(17, 17, 17, 0.4);
 }
 
 .fs-slide-1 .hero-content {
@@ -7943,13 +7943,13 @@ form .input-error-2:focus {
   font-size: 6em;
   font-weight: 800;
   letter-spacing: 5px;
-  color: #111;
+  color: #ececec;
 }
 
 .fs-slide-1 .hero-content .hero-subheading {
   margin-top: 50px;
   margin-bottom: 30px;
-  color: #111;
+  color: #ececec;
 }
 
 .fs-slide-2 {
@@ -7958,7 +7958,7 @@ form .input-error-2:focus {
 }
 
 .fs-slide-2 .bg-overlay {
-  background: rgba(17, 17, 17, 0.2);
+  background: rgba(17, 17, 17, 0.4);
 }
 
 .fs-slide-2 .hero-content {
@@ -7971,7 +7971,7 @@ form .input-error-2:focus {
   font-size: 6em;
   font-weight: 800;
   letter-spacing: 5px;
-  color: #111;
+  color: #ececec;
 }
 
 .fs-slide-2 .hero-content .hero-lead span {
@@ -7981,7 +7981,7 @@ form .input-error-2:focus {
 .fs-slide-2 .hero-content .hero-subheading {
   margin-top: 50px;
   margin-bottom: 30px;
-  color: #111;
+  color: #ececec;
 }
 
 .fs-slide-3 {
@@ -7990,7 +7990,7 @@ form .input-error-2:focus {
 }
 
 .fs-slide-3 .bg-overlay {
-  background: rgba(17, 17, 17, 0.2);
+  background: rgba(17, 17, 17, 0.4);
 }
 
 .fs-slide-3 .hero-content {
@@ -8003,7 +8003,7 @@ form .input-error-2:focus {
   font-size: 4em;
   font-weight: 800;
   letter-spacing: 15px;
-  color: #111;
+  color: #ececec;
 }
 
 .fs-slide-3 .hero-content .hero-lead span {
@@ -8013,7 +8013,7 @@ form .input-error-2:focus {
 .fs-slide-3 .hero-content .hero-subheading {
   margin-top: 50px;
   margin-bottom: 30px;
-  color: #111;
+  color: #ececec;
 }
 
 /* ---- 20.3 Full Width Slider ---- */
