--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1247,12 +1247,12 @@ mark {
 
 ::-moz-selection {
   color: #fff;
-  background: #17DA5B;
+  background: #000;
 }
 
 ::selection {
   color: #fff;
-  background: #17DA5B;
+  background: #000;
 }
 
 /* ---- 1.1 Text ---- */
@@ -2090,7 +2090,7 @@ fieldset[disabled] .form-control:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(244, 244, 244, 0.3);
+  background: rgba(244, 244, 244, 0.6);
 }
 
 /* --------------------------------------------------
